# CSE230Project_GH

./: .gitignore  README.md  guitarhero.cabal  stack.yaml  tiles.cabal
.stack-work/: stack.sqlite3
app/: Main.hs
src/: GuitarHero.hs  Main.hs  Tiles.hs  UI.hs
src/UI/: Difficulty.hs  Game.hs
tests/: Board.hs  Logic.hs  Test.hs
