name:                guitarhero
version:             0.1.0.0
homepage:            https://github.com/brian-nguyen329/CSE230Project_GH
author:              Brian Nguyen, Justin Nguyen, Brittany Trieu, Victor Ung
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable guitarhero
  hs-source-dirs:      src
  other-modules:       GuitarHero
                     , UI
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
